changes from Andrea's review

--- a/view/templates/page_home.html
+++ b/view/templates/page_home.html
@@ -8,6 +8,9 @@
     </div>
     <div resource="https://conneg.info/mediatypes" prefix="cc: http://creativecommons.org/ns# dcat: http://www.w3.org/ns/dcat# dct: http://purl.org/dc/terms/ doap: http://usefulinc.com/ns/doap# odrl: http://www.w3.org/ns/odrl/2/ skos: http://www.w3.org/2004/02/skos/core# v: http://www.w3.org/2006/vcard/ns#">
       <h1 class="rdf" property="dct:title">Media Types Web Service</h1>
+      <div class="rdf">
+        This service serves the <a property="dcat:servesDataset" href="https://conneg.info/mediatypes">Media Types Dataset</a>.
+      </div>
       <div title="dct:description" class="rdf" property="dct:description">
         <h3>Description</h3>
         <p>This web service, a Linked Data API, delivers IANA's Media Types in forms useful for Linked Data applications.</p>
@@ -24,6 +27,7 @@
         <dl>
           <dt>Created</dt><dd>2019-04-03</dd>
           <dt>Modified</dt><dd>2019-10-23</dd>
+          <dt>Issued</dt><dd>2019-04-13</dd>
         </dl>
       </div>
       <div class="rdf">
@@ -87,10 +91,9 @@
           This service is tagged and classified as follows:
         </p>
         <ul>
-          <li><span property="dcat:keyword">Media Type</span></li>
-          <li><span property="dcat:keyword">format</span></li>
-          <li><span property="dcat:keyword">MIME Type</span></li>
-          <li><span property="dcat:keyword">Content Negotiation</span></li>
+          <li><span property="dcat:keyword">web service</span></li>
+          <li><span property="dcat:keyword">Content Negotiation by Profile</span></li>
+          <li><span property="dcat:keyword">Media Types</span></li>
           <li><a property="dcat:theme" href="http://purl.org/coar/resource_type/c_7ad9">website</a></li>
           <li><a property="dcat:theme" href="http://pid.geoscience.gov.au/def/voc/ga/servicetype/W3C">World Wide Web Consortium service</a></li>
         </ul>
