uodating Service URIs since Dataset added

--- a/view/templates/page_home.html
+++ b/view/templates/page_home.html
@@ -9,7 +9,7 @@
     <div resource="https://conneg.info/mediatypes-service" prefix="cc: http://creativecommons.org/ns# dcat: http://www.w3.org/ns/dcat# dct: http://purl.org/dc/terms/ doap: http://usefulinc.com/ns/doap# odrl: http://www.w3.org/ns/odrl/2/ skos: http://www.w3.org/2004/02/skos/core# v: http://www.w3.org/2006/vcard/ns#">
       <h1 class="rdf" property="dct:title">Media Types Web Service</h1>
       <div class="rdf">
-        This service serves the <a property="dcat:servesDataset" href="https://conneg.info/mediatypes">Media Types Dataset</a>.
+        This service serves the <a property="dcat:servesDataset" href="https://w3id.org/mediatype/dataset">Media Types Dataset</a>.
       </div>
       <div title="dct:description" class="rdf" property="dct:description">
         <h3>Description</h3>
@@ -143,7 +143,7 @@
         <p>You can download the entire content that this service delivers as a single file:</p>
         <ul>
           <li resource="https://conneg.info/mediatypes-service/mediatypes.ttl" typeof="dcat:Distribution">
-            <a property="dcat:downloadURL" href="https://conneg.info/mediatypes-service/mediatypes.ttl">https://conneg.info/mediatypes/mediatypes.ttl</a>
+            <a property="dcat:downloadURL" href="https://conneg.info/mediatypes-service/mediatypes.ttl">https://conneg.info/mediatypes-service/mediatypes.ttl</a>
             <a style="display: none;" property="dcat:accessService" href="https://conneg.info/mediatypes-service"></a>
             <ul>
               <li>format: <a property="dct:format" href="https://w3id.org/mediatype/text/turtle">text/turtle</a></li>
@@ -164,7 +164,7 @@
             </ul>
           </li>
           <li resource="https://conneg.info/mediatypes-service/mediatypes.tar.gz" typeof="dcat:Distribution">
-            <a property="dcat:downloadURL" href="https://conneg.info/mediatypes-service/mediatypes.tar.gz">https://conneg.info/mediatypes/mediatypes.tar.gz</a>
+            <a property="dcat:downloadURL" href="https://conneg.info/mediatypes-service/mediatypes.tar.gz">https://conneg.info/mediatypes-service/mediatypes.tar.gz</a>
             <a style="display: none;" property="dcat:accessService" href="https://conneg.info/mediatypes-service"></a>
             <ul>
               <li>package format: <a property="dct:packageFormat" href="https://w3id.org/mediatype/application/gzip">GZip</a></li>
