improved compression & package formats for distribution

--- a/view/templates/page_home.html
+++ b/view/templates/page_home.html
@@ -167,7 +167,9 @@
             <a property="dcat:downloadURL" href="https://conneg.info/mediatypes-service/mediatypes.tar.gz">https://conneg.info/mediatypes-service/mediatypes.tar.gz</a>
             <a style="display: none;" property="dcat:accessService" href="https://conneg.info/mediatypes-service"></a>
             <ul>
-              <li>package format: <a property="dct:packageFormat" href="https://w3id.org/mediatype/application/gzip">GZip</a></li>
+              <li>format: <a property="dct:format" href="https://w3id.org/mediatype/text/turtle">text/turtle</a></li>
+              <li>package format: <a property="dct:packageFormat" href="http://publications.europa.eu/resource/authority/file-type/TAR">TAR</a></li>
+              <li>compression format: <a property="dct:packageFormat" href="https://w3id.org/mediatype/application/gzip">GZip</a></li>
               <li>license: <a property="dct:license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons 4.0</a></li>
               <li>rights: <span property="dct:rights">&copy; Nicholas Car, 2019</span></li>
               <li property="odrl:hasPolicy" typeof="odrl:Policy" resource="_:7">
