--- a/view/templates/agent.html
+++ b/view/templates/agent.html
@@ -4,7 +4,7 @@
     <div class="altview">
       <h4>Alternate Representations</h4>
       <p>See this content according to other profiles/views and Media Type/formats:</p>
-      <p><a href="{{ request.url }}&_view=alternates"><em>Alternates</em> View</a></p>
+      <p><a href="{{ request.base_url }}?uri={{ request.values.get('uri') }}&_profile=alt">Alternate Profiles listing</a></p>
     </div>
     <h1>{{ deets['name'] }}</h1>
     {%  if deets.get('u') is not none %}
