--- a/view/templates/mediatype-pl.html
+++ b/view/templates/mediatype-pl.html
@@ -4,7 +4,7 @@
     <div class="altview">
       <h4>Alternate Representations</h4>
       <p>Inne profil, formaty i języki:</p>
-      <p><a href="{{ request.base_url }}?uri={{ request.values.get('uri') }}&_view=alternates"><em>Profil na przemian</em> View</a></p>
+      <p><a href="{{ request.base_url }}?uri={{ request.values.get('uri') }}&_profile=alt">Profil na przemian</a></p>
     </div>
     <h1>{{ deets['label'] }}</h1>
     <h3><a href="{{ request.values.get('uri') }}">{{ request.values.get('uri') }}</a></h3>
