--- a/view/templates/page_home_reg.html
+++ b/view/templates/page_home_reg.html
@@ -4,7 +4,7 @@
     <div class="altview">
       <h4>Alternate Representations</h4>
       <p>See this content according to other profiles/views and Media Type/formats:</p>
-      <p><a href="{{ request.base_url }}?_view=alternates"><em>Alternates</em> View</a></p>
+      <p><a href="{{ request.base_url }}?_profile=alternates"><em>Alternates</em> View</a></p>
     </div>
 
     <h1>Media Types Register of Registers</h1>
