--- a/view/templates/alt.html
+++ b/view/templates/alt.html
@@ -2,9 +2,13 @@
 
     {% block content %}
         <h1>Alternate Profiles</h1>
-        <h3>Instance: <a href="{{ uri }}">{{ uri }}</a></h3>
-        <h4>Default Profile: <a href="{{ request.base_url }}?_profile={{ default_profile_token }}">{{ default_profile_token }}</a></h4>
-        <div class="overflow">
+        <dl>
+          <dt>Instance</dt>
+          <dd><a href="{{ utils.get_content_uri(uri) }}">{{ uri }}</a></dd>
+          <dt>Default Profile</dt>
+          <dd><a href="{{ request.base_url }}?{% if request.args.get('vocab_uri') is not none %}vocab_uri={{ request.args.get('vocab_uri') }}&{% endif %}uri={{ uri }}&_profile={{ default_profile_token }}">{{ default_profile_token }}</a></dd>
+        </dl>
+        <div class="overflow" style="margin-bottom:20px;">
             <table class="layout">
                 <tr>
                     <th style="font-weight: bold;">Token</th>
@@ -15,17 +19,17 @@
                     <th style="font-weight: bold;">Namespace</th>
                 </tr>
             {% for token, profile in profiles.items() %}
-                <tr style="border-bottom: 1px solid black; border-top: 1px solid black;">
-                    <td style="padding-right: 30px;"><a href="{{ request.base_url }}?_profile={{ token }}&_mediatype={{ profile['default_mediatype'] }}">{{ token }}</a></td>
+                <tr>
+                    <td style="padding-right: 30px;"><a href="{{ request.base_url }}?{% if request.args.get('vocab_uri') is not none %}vocab_uri={{ utils.url_encode(request.args.get('vocab_uri')) }}&{% endif %}uri={{ utils.url_encode(uri) }}&_profile={{ token }}&_mediatype={{ profile['default_mediatype'] }}">{{ token }}</a></td>
                     <td>{{ profile['label'] }}</td>
                     <td>
-                    {% for f in profile['mediatypes'] %}
-                        <a href="{{ request.base_url }}?_profile={{ token }}&_mediatype={{ f }}">{{ f }}</a><br />
+                    {% for f in profile['mediatypes']|sort() %}
+                        <a href="{{ request.base_url }}?{% if request.args.get('vocab_uri') is not none %}vocab_uri={{ utils.url_encode(request.args.get('vocab_uri')) }}&{% endif %}uri={{ utils.url_encode(uri) }}&_profile={{ token }}&_mediatype={{ f }}">{{ utils.get_pretty_mediatype(f) }}</a><br />
                     {% endfor %}
                     </td>
                     <td style="text-align: center;">
                     {% for l in profile['languages'] %}
-                        <a href="{{ request.base_url }}?_profile={{ token }}&_lang={{ l }}">{{ l }}</a><br />
+                        <a href="{{ request.base_url }}?{% if request.args.get('vocab_uri') is not none %}vocab_uri={{ utils.url_encode(request.args.get('vocab_uri')) }}&{% endif %}uri={{ utils.url_encode(uri) }}&_profile={{ token }}&_lang={{ l }}">{{ l }}</a><br />
                     {% endfor %}
                     </td>
                     <td>{{ profile['comment'] }}</td>
